--- a/apps/system/style/rocketbar.css
+++ b/apps/system/style/rocketbar.css
@@ -63,7 +63,7 @@
 }
 
 #search-bar #search-container {
-  background-color: rgba(0, 0, 0, 0.5);
+  background: #353534;
   height: calc(100% - 6rem);
 }
 
