Bug 957976 - [Rocketbar] Use Everything.me Partners API [r=ranbena, kgrandon]

--- a/apps/search/style/search.css
+++ b/apps/search/style/search.css
@@ -82,3 +82,7 @@ section.apps img {
   pointer-events: none;
   width: 2.75rem;
 }
+
+div[data-provider="WebResults"] > img {
+  border-radius: 50%;
+}
