--- a/apps/camera/style/controls.css
+++ b/apps/camera/style/controls.css
@@ -16,10 +16,9 @@
   position: absolute;
 }
 
-.buttons-disabled .cancel-pick,
-.buttons-disabled .gallery-button,
-.buttons-disabled .capture-button,
-.buttons-disabled .switch-button {
+.cancel-pick[disabled=disabled],
+.capture-button[disabled=disabled],
+.switch-button[disabled=disabled] {
   opacity: 0.5;
   pointer-events: none;
 }
@@ -34,7 +33,7 @@
 .capture-button span,
 .gallery-button span,
 .cancel-pick span {
-  transition: transform 0.2s ease-in-out;
+  -moz-transition: -moz-transform 0.2s ease-in-out;
   pointer-events: none;
   background-position: center center;
   background-repeat: no-repeat;
@@ -49,13 +48,14 @@
   height: 3rem;
 }
 
+.switch-button {
+  left: 66%;
+}
+
 .misc-button {
   text-align: center;
   left: 0;
 }
-
-/** Video Timer
- ---------------------------------------------------------*/
 
 .video-timer {
   position:relative;
@@ -63,81 +63,37 @@
   margin-top:-0.5em;
 }
 
-/** Gallery Button
- ---------------------------------------------------------*/
-
 .gallery-button {
-  display: none;
+  display: block;
   width: 100%;
   height: 100%;
 }
 
-/**
- * @gallery=true
- */
-
-.controls[data-gallery=true] .gallery-button {
-  display: block;
+.gallery-button.hidden {
+  display:none;
 }
-
-/**
- * @recording=true
- */
-
-.controls[data-recording=true] .gallery-button {
-  display: none;
-}
-
-/** Gallery Button Icon
- ---------------------------------------------------------*/
 
 .gallery-button span {
   background-image: url(images/grid.png);
 }
 
-/** Cancel Pick Button
- ---------------------------------------------------------*/
+.gallery-button[disabled=disabled] {
+  display: none;
+}
 
 .cancel-pick {
-  display: none;
+  display:block;
   width: 100%;
   height: 100%;
 }
 
-/**
- * @cancel
- */
-
-.controls[data-cancel=true] .cancel-pick {
-  display: block;
+.cancel-pick.hidden {
+  display:none
 }
-
-/** Cancel Pick Button Icon
- ---------------------------------------------------------*/
 
 .cancel-pick span {
   background-image: url(images/actionicon_cancel.png);
 }
-
-/** Video Timer
- ---------------------------------------------------------*/
-
-.video-timer {
-  display: none;
-  font-size: 1.8rem;
-  color: white;
-}
-
-/**
- * @capturing
- */
-
-.controls[data-recording=true] .video-timer {
-  display: block;
-}
-
-/** Capture Button
- ---------------------------------------------------------*/
 
 .capture-button {
   background-color: #03a2b4;
@@ -148,81 +104,42 @@
   top: -2.8rem;
 }
 
-/**
- * @recording
- */
-
-.controls[data-recording=true] .capture-button {
-  background-color: #d3361c;
-}
-
-/** Capture Button Icon
- ---------------------------------------------------------*/
-
-/**
- * @camera
- */
-
-.controls[data-mode=camera] .capture-button span {
-  background-image: url(images/camera.png);
-}
-
-/**
- * @video
- */
-
-.controls[data-mode=video] .capture-button span {
-  background-image: url(images/video.png);
-}
-
-/**
- * @capturing
- */
-
-.controls[data-recording=true] .capture-button span {
-  background-image: url(images/stop.png);
-}
-
-/** Switch Button
- ---------------------------------------------------------*/
-
-.switch-button {
+.video-timer {
   display: none;
-  left: 66%;
+  color: white;
+  font-size: 1.8rem;
 }
 
-.controls[data-switchable] .switch-button {
+/* Specific to when we are capturing video */
+.capturing .video-timer {
   display: block;
 }
 
-/**
- * @recording
- */
-
-.controls[data-recording=true] .switch-button {
-  pointer-events: none;
-  opacity: 0.5;
+.capturing .gallery-button {
+  display: none;
 }
 
-/** Switch Button Icon
- ---------------------------------------------------------*/
+.capturing .capture-button {
+  background-color: #d3361c;
+}
 
-/**
- * @video
- *
- * Swap the camera and video
- * icons depending on mode
- */
-.controls[data-mode=video] .switch-button span {
+.video.capturing .capture-button span {
+  background-image: url(images/stop.png);
+}
+
+/* Swap the camera and video icons depending on mode */
+.video .switch-button span {
   background-image: url(images/camera.png);
 }
 
-/**
- * @camera
- */
-
-.controls[data-mode=camera] .switch-button span {
+.camera .switch-button span {
   background-image: url(images/video.png);
 }
 
+.camera .capture-button span {
+  background-image: url(images/camera.png);
+}
 
+.video .capture-button span {
+  background-image: url(images/video.png);
+}
