--- a/apps/camera/style/viewfinder.css
+++ b/apps/camera/style/viewfinder.css
@@ -6,9 +6,9 @@
   top: 0;
   z-index: 25;
   opacity: 1;
-  transition: opacity 200ms ease-in-out;
+  transition: opacity 400ms ease-in-out;
 }
 
-.viewfinder.fade-out {
+.is-toggling-camera .viewfinder {
   opacity: 0;
 }
