--- a/apps/email/style/message_cards.css
+++ b/apps/email/style/message_cards.css
@@ -571,11 +571,11 @@ input.msg-search-text-tease {
 }
 
 .msg-reply-menu-reply:before {
-  background-image: url("../shared/style/headers/images/icons/reply.png");
+  background-image: url("images/icons/reply.png");
 }
 
 .msg-reply-menu-reply-all:before {
-  background-image: url("../shared/style/headers/images/icons/reply-all.png");
+  background-image: url("images/icons/reply-all.png");
 }
 
 .msg-reply-menu-forward:before {
