--- a/apps/communications/contacts/style/contacts.css
+++ b/apps/communications/contacts/style/contacts.css
@@ -120,6 +120,9 @@ section[role="region"] > header:first-child .icon.icon-edit-contact {
   white-space: pre-wrap;
 }
 
+.bulkdelete {
+  margin-top: 1rem;
+}
 #contact-detail h1 {
   font-size: 1.4rem;
   line-height: 1.5em;
