--- a/apps/wallpaper/style/wallpaper.css
+++ b/apps/wallpaper/style/wallpaper.css
@@ -29,15 +29,6 @@ html, body {
   border-right: none;
 }
 
-/* for the share activity */
-#preview {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow:hidden;
-}
 
 #buttons {
   position: absolute;
@@ -58,5 +49,33 @@ html, body {
   position: absolute;
   left: 0;
   width: 50%;
+  height: 100%;
+}
+
+/* like .frame */
+#crop-frame {
+  position: absolute;
+  top: 0rem;
+  bottom: 5rem;
+  left: 0;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  -moz-user-select: none;
+}
+#edit-preview-canvas {
+  position: absolute;
+  top: 1.5rem;
+  left: 1.5rem;
+  width: calc(100% - 3rem);  /* I can't do right: 1rem here. Bug? */
+  height: calc(100% - 3rem);  /* can't just set bottom: 1rem here */
+}
+
+#edit-crop-canvas {
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 100%;
   height: 100%;
 }
