--- a/apps/sms/style/sms.css
+++ b/apps/sms/style/sms.css
@@ -1044,3 +1044,7 @@ section[role="region"].information #messages-container,
 section[role="region"].information #messages-compose-form {
   display: none;
 }
+
+section[role="region"].information > header:first-child .icon.icon-back {
+  background-image: url(images/icons/close.png);
+}
