Data selector change

--- a/apps/clock/style/onring.css
+++ b/apps/clock/style/onring.css
@@ -86,7 +86,6 @@ html, body {
   display: inline-block;
   overflow: hidden;
   -moz-box-sizing: border-box;
-  width: calc((100% - 4.06rem) / 2 );
   height: 4.12rem;
   padding: 0 0.94rem;
   border: 0.1rem solid #9F9F9F;
@@ -107,10 +106,6 @@ html, body {
   white-space: nowrap;
 }
 
-.wide-button {
-  width: calc(100% - (4.06rem * .7666)) !important;
-}
-
 #ring-button-close:active {
   background: none repeat scroll 0 0 #008AAA;
   border-color: #008AAA;
@@ -122,7 +117,6 @@ html, body {
   display: inline-block;
   overflow: hidden;
   -moz-box-sizing: border-box;
-  width: calc((100% - 4.06rem) / 2 );
   height: 4.12rem;
   padding: 0 0.94rem;
   border: 0.1rem solid #00ACCE;
@@ -148,6 +142,18 @@ html, body {
   background: none repeat scroll 0 0 #008AAA;
   border-color: #008AAA;
   color: #333333;
+}
+
+.ring-display[data-ring-type="alarm"] #footer-button-container .button {
+  width: calc((100% - 4.06rem) / 2);
+}
+
+.ring-display[data-ring-type="timer"] #ring-button-close {
+  width: calc(100% - (4.06rem * .7666));
+}
+
+.ring-display[data-ring-type="timer"] #ring-button-snooze {
+  display: none;
 }
 
 /* 320x480 phones */
