--- a/apps/calendar/style/ui.css
+++ b/apps/calendar/style/ui.css
@@ -39,6 +39,30 @@ ol.link-list li:only-child a {
   border-bottom: 0;
 }
 
+body[data-path="/month/"] #view-selector > .month > a,
+body[data-path="/week/"] #view-selector > .week > a,
+body[data-path="/day/"] #view-selector > .day > a {
+  color: #00aacc;
+  font-weight: 500;
+}
+
+body[data-path="/month/"] #view-selector > .month a:after,
+body[data-path="/week/"] #view-selector > .week a:after,
+body[data-path="/day/"] #view-selector > .day > a:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  left: 0;
+  height: calc(100% - 0.3rem);
+  border-bottom: 0.3rem solid #00aacc;
+}
+
+body[data-path="/month/"] #view-selector > .month a:active,
+body[data-path="/week/"] #view-selector > .week a:active,
+body[data-path="/day/"] #view-selector > .day > a:active {
+  color: #5f5f5f;
+}
+
 /* view management */
 
 #modify-event-view {
@@ -57,8 +81,9 @@ ol.link-list li:only-child a {
 
 #time-views > section {
   display: none;
+  position: relative;
+  height: calc(100% - 9.6rem);
   background: #fff;
-  height: calc(100% - 9rem);
 }
 
 #time-views > section.active {
@@ -471,30 +496,13 @@ Indicators are in units of 12
 }
 
 /* [BB][tabs]*/
-body[data-path="/month/"] #view-selector > .month,
-body[data-path="/week/"] #view-selector > .week,
-body[data-path="/day/"] #view-selector > .day {
-  background: #fff;
-}
-
-body[data-path="/month/"] #view-selector > .month > a,
-body[data-path="/week/"] #view-selector > .week > a,
-body[data-path="/day/"] #view-selector > .day > a {
-  color: #000;
-  font-weight: 500;
-}
-
 #view-selector {
-  bottom: auto;
+  position: absolute;
+  bottom: 0;
 }
 
 #view-selector > li > a {
   outline: none;
-}
-
-#view-selector > li > a:active {
-  background-color: #008aaa;
-  color: #fff;
 }
 
 @keyframes fade-status {
