Bug 947104 - [Music] Update to new 1.3 tab bar visual design

--- a/apps/music/style/music.css
+++ b/apps/music/style/music.css
@@ -462,7 +462,7 @@ body.picker-mode #title-player {
 
 .main-tile:last-child,
 .sub-tile:last-child {
-  margin-bottom: 4rem;
+  margin-bottom: 4.5rem;
 }
 
 .tile-container {
@@ -875,36 +875,30 @@ button::-moz-focus-inner {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 4rem;
   z-index: 20;
-}
-
-/* Overwrite BB tabs background transparency */
-[role="tablist"] > [role="tab"] > a {
-  background-color: rgba(0, 0, 0, 0.75);
 }
 
 #tabs a {
   outline: none;
 }
 
-#mix[role="tab"] a:after {
+#mix[role="tab"] a {
   background-image: url("./images/iconaction_media_gridview.png");
 }
 
-#playlists[role="tab"] a:after {
+#playlists[role="tab"] a {
   background-image: url("./images/iconaction_media_playlistfilter.png");
 }
 
-#artists[role="tab"] a:after {
+#artists[role="tab"] a {
   background-image: url("./images/iconaction_media_artistfilter.png");
 }
 
-#albums[role="tab"] a:after {
+#albums[role="tab"] a {
   background-image: url("./images/iconaction_media_albumfilter.png");
 }
 
-#songs[role="tab"] a:after {
+#songs[role="tab"] a {
   background-image: url("./images/iconaction_media_songsfilter.png");
 }
 
