Bug 957199 - [B2G][Settings] Cannot scroll any Settings app page after viewing Open Source Notices

--- a/apps/settings/style/settings.css
+++ b/apps/settings/style/settings.css
@@ -600,6 +600,13 @@ ul li > label .range-icons.brightness {
   height: calc(100% - 5rem);
 }
 
+#os-license {
+  pointer-events: none;
+}
+
+#os-license.loaded {
+  pointer-events: auto;
+}
 
 /******************************************************************************
  * Help
@@ -664,4 +671,3 @@ html[dir="rtl"] label[for^="pwd"] {
 section[data-dialog] > header:first-child .icon.icon-back {
   background-image: url(/shared/style/headers/images/icons/close.png);
 }
-
