Revert "Bug 958582 - Prevent long titles in the Rocketbar displacing status icons. r=daleharvey"
This reverts commit de0ee514be32af0677379b29013e55efb86ec49b due to travis failures

--- a/apps/system/style/statusbar/statusbar.css
+++ b/apps/system/style/statusbar/statusbar.css
@@ -20,10 +20,6 @@ body, html {
   padding: 0.2rem 0;
   -moz-box-sizing: border-box;
   -moz-user-focus: ignore;
-
-  display: flex;
-  flex-direction: row;
-  -moz-user-select: none;
 }
 
 #screen.locked:not(.attention) #statusbar{
@@ -34,54 +30,27 @@ body, html {
   display: block;
 }
 
-#statusbar-icons > * {
+#statusbar > * {
   pointer-events: none;
   float: right;
   margin: 0 0.2rem;
 }
 
-#statusbar-title {
-  flex-grow: 1;
-  flex-shrink: 1;
-  min-width: 33%;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  padding-left: 0.3rem;
-}
-
-body:not(.rb-enabled) #statusbar-title {
-  display: none;
-}
-
-#statusbar-icons {
-  flex-grow: 1;
-  flex-shrink: 0;
-  min-width: 33%;
-  max-width: 67%;
-  -moz-user-focus: ignore;
-  -moz-user-select: none;
-}
-
-body:not(.rb-enabled) #statusbar-icons {
-  max-width: 100%;
-}
-
 #statusbar-title,
-body:not(.rb-enabled) #statusbar-icons > .sb-start {
+body:not(.rb-enabled) #statusbar > .sb-start {
   float: left;
   -moz-transition: visibility 0.5s ease, -moz-transform 0.5s ease;
 }
 
-*[dir=rtl] #statusbar-icons > * {
+*[dir=rtl] #statusbar > * {
   float: left;
 }
 
-*[dir=rtl] #statusbar-icons > .sb-start {
+*[dir=rtl] #statusbar > .sb-start {
   float: right;
 }
 
-#statusbar-icons > .sb-start-upper {
+#statusbar > .sb-start-upper {
   visibility: hidden;
   position: absolute;
   top: -2rem;
@@ -90,19 +59,19 @@ body:not(.rb-enabled) #statusbar-icons > .sb-start {
   -moz-transition: visibility 0.5s ease, -moz-transform 0.5s ease;
 }
 
-*[dir=rtl] #statusbar-icons > .sb-start-upper {
+*[dir=rtl] #statusbar > .sb-start-upper {
   left: auto;
   right: 0;
 }
 
-.utility-tray #statusbar-icons > .sb-start-upper,
+.utility-tray #statusbar > .sb-start-upper,
 .utility-tray #statusbar > #statusbar-title,
 #statusbar-title.hidden {
   visibility: visible;
   -moz-transform: translateY(2rem);
 }
 
-.utility-tray #statusbar-icons > .sb-start {
+.utility-tray #statusbar > .sb-start {
   visibility: hidden;
   -moz-transform: translateY(2rem);
 }
