Bug 950250 Combined background color for div and lists

--- a/apps/settings/style/settings.css
+++ b/apps/settings/style/settings.css
@@ -69,6 +69,7 @@ section[role="region"] > div {
  * Need this for scrollable background layer
  * optimization in gecko. See Bug 950250
  */
+section[role="region"],
 section[role="region"] > div > ul {
   background-color: #f4f4f4;
 }
