--- a/apps/system/style/statusbar/statusbar.css
+++ b/apps/system/style/statusbar/statusbar.css
@@ -54,6 +54,10 @@ body:not(.rb-enabled) #statusbar-title {
   display: none;
 }
 
+#statusbar-title {
+  pointer-events: none;
+}
+
 #statusbar-icons {
   flex-grow: 1;
   flex-shrink: 0;
