--- a/apps/settings/style/downloads.css
+++ b/apps/settings/style/downloads.css
@@ -219,6 +219,7 @@
 }
 
 #downloadList ul > li[data-state="stopped"] progress,
+#downloadList ul > li[data-state="failed"] progress,
 #downloadList ul > li[data-state="succeeded"] progress {
   display: none;
 }
