--- a/apps/system/style/zindex.css
+++ b/apps/system/style/zindex.css
@@ -156,7 +156,7 @@
   z-index: 2044;
 }
 
-#screen > [data-z-index-level="search-bar"] {
+#screen > [data-z-index-level="rocketbar-results"] {
   z-index: 2043;
 }
 
