Bug 947029 - [B2G][Gallery][Small images]Extremely small images display in gallery with a larger than expected thumbnail

--- a/apps/gallery/style/gallery.css
+++ b/apps/gallery/style/gallery.css
@@ -252,6 +252,10 @@ body.pickView #thumbnails {
   padding-bottom: calc((100% - 0.2rem) / 3 );
 }
 
+.thumbnailSmall {
+  background-size: auto;
+}
+
 .thumbnail:nth-child(3n) {
   margin-right: 0;
 }
