Bug 947029 - [B2G][Gallery][Small images]Extremely small images display in gallery with a larger than expected thumbnail

--- a/apps/gallery/style/gallery.css
+++ b/apps/gallery/style/gallery.css
@@ -252,7 +252,7 @@ body.pickView #thumbnails {
   padding-bottom: calc((100% - 0.2rem) / 3 );
 }
 
-.thumbnailSmall {
+.thumbnail-small {
   background-size: auto;
 }
 
