--- a/apps/system/style/window.css
+++ b/apps/system/style/window.css
@@ -177,7 +177,7 @@
 }
 
 /* Prebuild width/height */
-#screen:not(.active-statusbar):not(.software-button-enabled) > #windows > .appWindow:not(.fullscreen-app),
+#screen:not(.active-statusbar):not(.software-button-enabled):not(:-moz-full-screen-ancestor) > #windows > .appWindow:not(.fullscreen-app),
 .appWindow.homescreen {
   top: 2rem;
   height: calc(100% - 2rem);
@@ -189,20 +189,20 @@
   width: 100%;
 }
 
-#screen.active-statusbar:not(.software-button-enabled) > #windows > .appWindow {
+#screen.active-statusbar:not(.software-button-enabled):not(:-moz-full-screen-ancestor) > #windows > .appWindow {
   top: 4rem;
   height: calc(100% - 4rem);
   width: 100%;
 }
 
-#screen.active-statusbar.software-button-enabled > #windows > .appWindow {
+#screen.active-statusbar.software-button-enabled:not(:-moz-full-screen-ancestor) > #windows > .appWindow {
   top: 4rem;
   bottom: 5rem;
   height: calc(100% - 5rem - 4rem);
   width: 100%;
 }
 
-#screen.software-button-enabled > #windows > .appWindow {
+#screen.software-button-enabled:not(:-moz-full-screen-ancestor) > #windows > .appWindow {
   top: 2rem;
   bottom: 5rem;
   height: calc(100% - 5rem - 2rem);
@@ -389,4 +389,9 @@
 #windows > .appWindow.outside-edges-right {
   opacity: 1;
   transform: translateX(calc(100% + 1rem));
+}
+
+#screen:-moz-full-screen-ancestor > #windows > .appWindow.active {
+  top: 0;
+  height: 100%;
 }
