Bug 930440 - [Messages] Urls in a message are not highlighted when tapping on them r=julien
(cherry picked from commit dfd0861f3e5d875d75c7d1c206a36b2ea1a449a0)

--- a/apps/sms/style/sms.css
+++ b/apps/sms/style/sms.css
@@ -586,6 +586,10 @@ section.has-carrier .article-list header:first-child {
   text-decoration: underline;
 }
 
+.article-list[data-type="list"] .message .bubble p a:active {
+  color: #FF4E00;
+}
+
 /*
   Styles for Edit mode in Messages Container
 */
