--- a/apps/system/style/cards_view/cards_view.css
+++ b/apps/system/style/cards_view/cards_view.css
@@ -159,7 +159,10 @@
   transform-origin: 50% 30%;
 }
 
-#screen.task-manager #cards-view .card > h1,
+#screen.task-manager #cards-view .card > h1 {
+  font-size: 3rem !important;
+}
+
 #screen.task-manager #cards-view .card > p {
   display: none;
 }
