Bugzilla 965169: In Diaplay settings Brightness level not in percentage

--- a/apps/settings/style/lists.css
+++ b/apps/settings/style/lists.css
@@ -262,7 +262,11 @@ ul li.sound-setting > label input[type="range"] {
 ul li#brightness-manual > label input[type="range"] {
   margin: 0 auto;
   width: calc(100% - 10rem);
-  display: inline;
+  left: 0.5rem;
+}
+
+ul li#brightness-manual > small#brightness-manual-level {
+  padding-top: 1.2rem;
 }
 
 /******************************************************************************
